# svilia-cipher

./: .gitignore  README.md  svilia-cipher.py
.github/workflows/: publish.yml
svilia-cipher-pypi/svilia-cipher-pypi/: LICENSE  README.md  pyproject.toml
svilia-cipher-pypi/svilia-cipher-pypi/svilia_cipher/: __init__.py  __main__.py
svilia-cipher-pypi/svilia-cipher-pypi/svilia_cipher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
